finally fixed overflow overhead

--- a/src/style.css
+++ b/src/style.css
@@ -521,7 +521,7 @@ body {
 .text-area {
   height: 200px;
 }
-/* .carousel .one{
+.carousel .one{
   background-image: url(https://cdn.pixabay.com/photo/2016/10/14/19/21/canyon-1740973__340.jpg);
   background-size: 100% 100%;
 }
@@ -534,4 +534,4 @@ body {
 .carousel .three{
   background-image: url(https://images.unsplash.com/photo-1585383234137-2367d3c5302d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: 100% 100%;
-} */
+}
